--- a/po/fr.po
+++ b/po/fr.po
@@ -2,13 +2,14 @@
 # This file is put in the public domain.
 # 
 # Translators:
+# dwan  <dwanafite@yahoo.fr>, 2012.
 # Pierre-Olivier Boulant <po.boulant@free.fr>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
-"POT-Creation-Date: 2012-12-26 12:51-0500\n"
-"PO-Revision-Date: 2012-12-27 18:02+0000\n"
+"POT-Creation-Date: 2012-12-31 20:40-0500\n"
+"PO-Revision-Date: 2013-01-01 19:36+0000\n"
 "Last-Translator: Pierre-Olivier Boulant <po.boulant@free.fr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,9 +17,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-
-msgid " "
-msgstr " "
 
 #, tcl-format
 msgid "%s Font"
@@ -304,7 +302,7 @@ msgstr "Jack ne fonctionne pas !"
 
 msgid ""
 "JackOSX is not fully installed, Pd-extended cannot use Jack without it."
-msgstr "JackOSX n'est pas complétement installé. Pd-extended ne peut pas utiliser Jack sans cela."
+msgstr "JackOSX n'est pas complètement installé. Pd-extended ne peut pas utiliser Jack sans cela."
 
 msgid "Jump on click"
 msgstr "Direct"
@@ -728,6 +726,9 @@ msgstr "hauteur :"
 
 msgid "hold:"
 msgstr "maintien :"
+
+msgid "http://puredata.info/docs/StartHere"
+msgstr "http://puredata.info/docs/PourCommencer"
 
 msgid "intrrpt:"
 msgstr "interruption :"
